fixed scaling on mobile devices

--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
 body {
-    margin: 0;
     background-color: #1F2937;
     
 }
@@ -7,6 +6,7 @@ body {
 .container {
     display: flex;
     justify-content: center;
+
 }
 
 h1 {
@@ -95,10 +95,4 @@ span {
     border-radius: 6px;
     color: white;
     border-color: #FFFFFF;
-}
-
-@media only screen and (max-width: 600px) {
-   body {
-    background-color: aqua;
-    }
 }
